--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -7,7 +7,7 @@
     "types": "./dist/server.d.ts",
     "scripts": {
         "build": "tsc",
-        "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+        "dev": "tsc --watch",
         "start": "node dist/server.js",
         "test": "jest",
         "test:coverage": "jest --coverage",
@@ -24,10 +24,9 @@
         "@types/express": "^4.17.21",
         "@types/node": "^18.0.0",
         "typescript": "^5.3.0",
-        "ts-node-dev": "^2.0.0",
         "jest": "^29.7.0",
         "@types/jest": "^29.5.0",
         "ts-jest": "^29.1.0",
-        "rimraf": "^5.0.0"
+        "rimraf": "^6.0.1"
     }
 }
