Major Refactor: Monorepo Architecture with Standalone Extension & MCP Server (#58)
* First commit - Architectural redesign to transform BC Telemetry Buddy into a modular monorepo with a shared core library (@bctb/shared), a standalone NPM-published MCP server for AI integrations, and an independent VSCode extension that works with or without the MCP server, featuring multi-profile support for managing multiple customer telemetry endpoints.

* Fixed tests, removed obsolete tests

* Enhance BC Telemetry Buddy: Revamp system prompt for clarity and workflow; implement structured analysis conclusions; improve multi-profile handling; expand tool definitions; refine event discovery and query processes; enforce tenant vs company distinctions; and establish double-check protocols for sparse results.

* Update documentation for v0.3.0: Revise MIGRATION.md, UserGuide.md, and DesignWalkthrough.md to reflect completed refactoring, remove development warnings, and verify implemented features. Enhance clarity on standalone extension usage and multi-profile support.

* feat: add release guide and update release process

- Created a comprehensive Release Guide for BC Telemetry Buddy components, detailing workflows for extension and MCP releases, tagging formats, and manual release processes.
- Implemented MCP installation checks and notifications in the VS Code extension.
- Added MCP status bar to display installation status and provide actions for installation and updates.
- Enhanced Setup Wizard to include MCP installation and status reporting.
- Updated release script to handle separate tagging formats for extension and MCP releases.
- Added error handling and user instructions for MCP installation issues.

* Enhance MCP integration and user experience

- Updated User Guide to clarify MCP requirements and installation options.
- Added comprehensive tests for MCP installation and status checking.
- Implemented message handlers for Setup Wizard to manage MCP installation and status

--- a/packages/extension/tsconfig.json
+++ b/packages/extension/tsconfig.json
@@ -8,8 +8,16 @@
         "lib": [
             "ES2022"
         ],
-        "sourceMap": true
+        "sourceMap": true,
+        "declaration": false,
+        "declarationMap": false,
+        "composite": false
     },
+    "references": [
+        {
+            "path": "../shared"
+        }
+    ],
     "include": [
         "src/**/*"
     ],
