--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -1,13 +1,19 @@
 {
-    "name": "@bctb/mcp",
-    "version": "0.1.0",
-    "description": "MCP backend server for BC Telemetry Buddy",
+    "name": "bc-telemetry-buddy-mcp",
+    "version": "1.0.0",
+    "description": "Model Context Protocol server for Business Central telemetry",
     "type": "commonjs",
     "main": "./dist/server.js",
     "types": "./dist/server.d.ts",
+    "bin": {
+        "bctb-mcp": "./dist/cli.js"
+    },
     "scripts": {
-        "build": "esbuild src/server.ts --bundle --outfile=dist/server.js --platform=node --format=cjs --sourcemap --minify --external:fsevents && node -e \"require('fs').copyFileSync('launcher.js', 'dist/launcher.js')\"",
-        "dev": "esbuild src/server.ts --bundle --outfile=dist/server.js --platform=node --format=cjs --sourcemap --watch",
+        "build": "npm run build:shared && npm run build:server && npm run build:cli",
+        "build:shared": "cd ../shared && npm run build",
+        "build:server": "esbuild src/server.ts --bundle --outfile=dist/server.js --platform=node --format=cjs --sourcemap --minify",
+        "build:cli": "esbuild src/cli.ts --bundle --outfile=dist/cli.js --platform=node --format=cjs --sourcemap --minify --banner:js=\"#!/usr/bin/env node\"",
+        "dev": "tsc --build --watch",
         "compile": "tsc --noEmit",
         "start": "node dist/server.js",
         "test": "jest",
@@ -16,14 +22,13 @@
         "clean": "rimraf dist"
     },
     "dependencies": {
-        "@azure/msal-node": "^3.8.0",
-        "axios": "^1.6.0",
-        "express": "^4.18.2",
-        "lru-cache": "^10.1.0"
+        "commander": "^12.0.0",
+        "express": "^4.18.2"
     },
     "devDependencies": {
+        "@bctb/shared": "file:../shared",
         "@types/express": "^4.17.21",
-        "@types/jest": "^30.0.0",
+        "@types/jest": "^29.5.0",
         "@types/node": "^22.18.11",
         "esbuild": "^0.27.0",
         "jest": "^29.7.0",
